--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <li><%= link_to 'Home', root_path %></li>
   <% if current_user %>
-    <li><%= link_to 'Sign out', destroy_user_session, method: :delete %></li>
+    <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
   <% else %>
     <li><%= link_to 'Sign in', new_user_session_path %></li>
   <% end %>
