--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,8 @@
-<% @posts.each do |post| %>
-  <%= render partial: 'posts/post', locals: {post: post} %>
+<% if user_signed_in? %>
+  <%= link_to 'New post', new_post_path %>
 <% end %>
+<ul>
+<% @posts.each do |post| %>
+  <li><%= render partial: 'posts/post', locals: {post: post} %></li>
+<% end %>
+</ul>
