--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,6 @@
+<% if user_signed_in? %>
+  <%= link_to 'New project', new_project_path %> 
+<% end %> 
 <% @projects.each do |project| %>
   <%= render partial: 'projects/project', locals: {project: project} %>
 <% end %> 
