--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,18 @@
-<ul>
-  <li><%= link_to 'Home', root_path %></li>
-  <% if current_user %>
-    <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
-  <% end %>
-</ul>
+<nav class="navbar navbar-inverse">
+  <div class="continer-fluid">
+    <div class="navbar-header">
+      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+    </div>
+    <div class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav">
+        <li>
+          <% if current_user %>
+            <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= link_to 'Sign in', new_user_session_path, class: 'btn'  %>
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
