--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <h3><%= @post.title %></h3>
+<%= link_to 'Edit post', edit_post_path(@post.id) %> 
 <p><%= @post.body %></p>
 
 <p>Created on <%= @post.created_at %></p>
