--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,11 @@
-<h3><%= @post.title %></h3>
-<%= link_to 'Edit post', edit_post_path(@post.id) %> 
-<p><%= @post.body %></p>
+<div class='container'>
+<div class='jumbotron' >
+  <h3><%= @post.title %></h3>
+  <%= link_to 'Edit post', edit_post_path(@post.id) if user_signed_in? %> 
+  <p><%= @post.body %></p>
 
-<p>Created on <%= @post.created_at %></p>
-<p>Last edited <%= @post.updated_at %></p>
-<p>Posted by <%= mail_to 'bcgoss@gmail.com', 'Bryan Goss' %>
+  <h6>Created on <%= @post.created_at %></h6>
+  <h6>Last edited <%= @post.updated_at %></h6>
+  <h6>Posted by <%= mail_to 'bcgoss@gmail.com', 'Bryan Goss' %></h6>
+</div>
+</div>
